--- a/src/Components/Styles/Navbar.css
+++ b/src/Components/Styles/Navbar.css
@@ -39,44 +39,6 @@ span {
 }
 
 /* header-section */
-.top-header {
-    background: #000000;
-    padding: 10px 0;
-}
-
-.top-header-inn {
-    display: flex;
-    justify-content: space-between;
-}
-
-.top-header-inn p {
-    font-style: normal;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 18px;
-    letter-spacing: 0.05em;
-    text-transform: capitalize;
-    color: #FFFFFF;
-}
-
-.top-header-inn select {
-    font-style: normal;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 18px;
-    letter-spacing: 0.05em;
-    text-transform: capitalize;
-    color: #FFFFFF;
-    border: none;
-    outline: none;
-    background: transparent;
-    cursor: pointer;
-}
-
-.top-header-inn select option {
-    background: #000000;
-}
-
 .middle-header {
     padding: 30px 0;
     background: #EDEDED;
@@ -88,108 +50,26 @@ span {
     align-items: center;
 }
 
-.middle-header-inn .input-part {
-    width: 100%;
-    max-width: 450px;
-    position: relative;
-}
-
-.middle-header-inn .input-part input {
-    width: 100%;
-    height: 40px;
-    padding: 14px 120px 14px 25px;
-    border-radius: 5px;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 21px;
-    text-transform: capitalize;
-    color: rgba(0, 0, 0, 0.5);
-    outline: none;
-    border: none;
-}
-
-.middle-header-inn form i {
-    background: #FEA700;
-    padding: 12px 8px;
-    position: absolute;
-    right: 0;
-    top: 0;
-    border-radius: 0 5px 5px 0;
-    height: 40px;
-    width: 50px;
-    text-align: center;
-}
-
-.navspace {
-    padding-right: 0.5rem;
-    padding-left: 0.5rem;
-}
-
-.navpadle {
-    margin: 0 auto;
-}
-
-.navbar {
-    background: #FEA700;
-}
-
-.navbar .navbar-nav .nav-link {
-    color: #000;
-    font-size: 12px;
-    position: relative;
-}
-
-.navbar .navbar-nav .nav-link:hover::after,
-.navbar .navbar-nav .nav-link:active::after,
-.navbar .navbar-nav .nav-link.active::after {
-    display: block;
-}
-
 .login-option {
-    width: 100%;
-    max-width: 100px;
     display: flex;
     justify-content: space-between;
+    gap: 20px;
 }
 
-.login-option i {
-    color: #000000;
-}
-
-.login-signup {
-    position: relative;
-}
-
-.login-signup ul {
-    position: absolute;
-    opacity: 0;
-    visibility: hidden;
-    top: 40px;
-    right: -90px;
-    width: 100%;
-    min-width: 200px;
-    transition: 0.3s;
-    background: #fff;
-    padding: 0 10px;
-}
-
-.login-signup:hover ul {
-    opacity: 1;
-    visibility: visible;
-    z-index: 1;
-}
-
-.login-signup ul li {
-    padding: 10px 0;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+.login-option a {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 18px;
+    letter-spacing: 0.02em;
+    width: 100px;
+    height: 40px;
+    padding: 10px;
+    border: 1px solid #FEA700;
+    border-radius: 5px;
+    background: transparent;
     text-align: center;
-    color: #000000;
-}
-
-.login-signup ul li:last-child {
-    border: none;
-    color: #FF0000;
+    color: #FEA700;
 }
 
 /* header-section */
@@ -201,20 +81,8 @@ span {
         width: 150px;
     }
 
-    .middle-header-inn .input-part {
-        max-width: 400px;
-    }
-
-    .navbar {
-        justify-content: center;
-    }
-
     .navbar-toggler:focus {
         box-shadow: none;
-    }
-
-    .navpadle {
-        padding: 10px 0;
     }
 }
 
@@ -230,18 +98,6 @@ span {
 }
 
 @media screen and (max-width:500px) {
-    .middle-header-inn .input-part input {
-        height: 36px;
-        padding: 10px 50px 10px 15px;
-        font-size: 12px;
-        line-height: 16px;
-    }
-
-    .middle-header-inn form i {
-        height: 36px;
-        width: 40px;
-        padding: 10px 6px;
-    }
 
     .navbar-brand img {
         width: 120px;
