--- a/src/Components/Styles/TwoStepV.css
+++ b/src/Components/Styles/TwoStepV.css
@@ -47,3 +47,125 @@
 .two_step_btns a:last-child {
     background: #F5F5F5;
 }
+
+/* twostepdetail */
+.twostepdetail {
+    padding: 100px 0;
+}
+
+.twostepdetail .container-fluid {
+    max-width: 1200px;
+}
+
+.twostepdetail h2 {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 54px;
+    letter-spacing: 0.02em;
+    color: #000000;
+    margin-bottom: 30px;
+}
+
+.twostepdetail h3 {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 30px;
+    letter-spacing: 0.02em;
+    color: #000000;
+    margin-bottom: 10px;
+}
+
+.twostepdetail p {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 21px;
+    letter-spacing: 0.02em;
+    color: #000000;
+    opacity: 0.6;
+    margin-bottom: 25px;
+}
+
+.twostepdetail ul {
+    list-style: auto;
+    padding-left: 25px;
+}
+
+.twostepdetail ul li {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 21px;
+    letter-spacing: 0.02em;
+    color: #000000;
+    margin-bottom: 15px;
+}
+
+.twostepdetail img {
+    width: 100%;
+    padding: 50px 0;
+}
+
+.twostepdetail .started_btn {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 24px;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: #272220;
+    background: #FEA700;
+    border-radius: 5px;
+    width: 300px;
+    height: 48px;
+    padding: 13px;
+}
+
+/* twostepdetail */
+@media screen and (max-width: 1199px) {
+
+    /* twostepdetail */
+    .twostepdetail {
+        padding: 70px 0;
+    }
+
+    .twostepdetail h2 {
+        font-size: 24px;
+        line-height: 34px;
+        margin-bottom: 23px;
+    }
+
+    .twostepdetail h3 {
+        font-size: 18px;
+        line-height: 24px;
+    }
+
+    .twostepdetail p {
+        font-size: 13px;
+        line-height: 18px;
+        margin-bottom: 20px;
+    }
+
+    /* twostepdetail */
+}
+
+@media screen and (max-width: 1199px) {
+    .two_step_v h2 {
+        font-size: 23px;
+        line-height: 33px;
+    }
+
+    .two_step_v p {
+        font-size: 14px;
+        line-height: 20px;
+        margin-bottom: 20px;
+    }
+
+    .two_step_btns a {
+        font-size: 17px;
+        line-height: 27px;
+        padding: 10px 30px;
+    }
+}
