--- a/src/Components/Styles/RegisterAndStart.css
+++ b/src/Components/Styles/RegisterAndStart.css
@@ -33,10 +33,10 @@
     font-size: 18px;
     color: #010101;
     margin: 30px 0;
+    display: flex;
 }
 
 .input-type-text {
-    opacity: 0.3;
     border: 2px solid rgba(0, 0, 0, 0.3);
     border-radius: 5px;
     width: 60%;
@@ -69,4 +69,31 @@
     margin: 20px 0 0 0;
     width: 100%;
     border: none;
+}
+
+.select {
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-size: 16px;
+    border: 1px solid;
+    margin-bottom: 40px;
+    width: 60%;
+    height: 40px;
+}
+
+.check-availability {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-size: 14px;
+    color: #1C6DC1;
+    border: none;
+    background-color: transparent;
+}
+
+.outer-cb {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    justify-content: space-between;
+    width: 60%;
 }
