--- a/src/Components/Styles/TwoStepV.css
+++ b/src/Components/Styles/TwoStepV.css
@@ -124,7 +124,7 @@
 }
 
 /* twostepdetail */
-@media screen and (max-width: 1199px) {
+@media screen and (max-width: 991px) {
 
     /* twostepdetail */
     .twostepdetail {
@@ -138,7 +138,7 @@
     }
 
     .twostepdetail h3 {
-        font-size: 18px;
+        font-size: 17px;
         line-height: 24px;
     }
 
@@ -146,6 +146,16 @@
         font-size: 13px;
         line-height: 18px;
         margin-bottom: 20px;
+    }
+
+    .twostepdetail img {
+        padding: 30px 0;
+    }
+
+    .twostepdetail ul li {
+        font-size: 13px;
+        line-height: 19px;
+        margin-bottom: 12px;
     }
 
     /* twostepdetail */
