--- a/src/Components/Styles/ShowFillDetails.css
+++ b/src/Components/Styles/ShowFillDetails.css
@@ -1,7 +1,7 @@
 .accordion-header button {
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
-    font-size: 20px;
+    font-size: 16px;
     color: #000000;
     background-color: #F4F4F4;
 }
@@ -29,12 +29,14 @@
     margin-top: 20px;
 }
 
-.set-shipping {
-    display: flex;
-    gap: 5px;
+.set-shipping p {
+    font-size: 14px;
 }
 
 .set-shipping {
+    align-items: center;
+    display: flex;
+    gap: 5px;
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
     font-size: 17px;
@@ -47,4 +49,216 @@
     border-radius: 50%;
     padding: 0px 10px;
     color: #F4F4F4;
+}
+
+.qwe {
+    display: flex;
+    gap: 30px;
+    background: #E7E7E7;
+    border: 1px solid #BBBBBB;
+    padding: 30px 30px;
+}
+
+.offer-free {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-size: 16px;
+    color: #000000;
+}
+
+.free-shipping {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    color: #000000;
+}
+
+.qwe input {
+    width: 30px;
+}
+
+.per-rate p {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-size: 16px;
+    color: #000000;
+}
+
+.per-rate input {
+    border: 1px solid #BBBBBB;
+    border-radius: 5px;
+    width: 100%;
+}
+
+.per-rate span {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    color: #000000;
+}
+
+.local {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 30px;
+    gap: 20px;
+}
+
+.outer-offer-free {
+    width: 100%;
+}
+
+.to-verify-your {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-size: 13px;
+    color: #979797;
+}
+
+.account-text p {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-size: 16px;
+    color: #000000;
+    margin: 30px 0 10px 0;
+}
+
+.account-text input {
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    border-radius: 5px;
+    width: 100%;
+    max-width: 400px;
+    height: 32px;
+}
+
+.both-side-part {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.left-side-part {
+    width: 100%;
+}
+
+.right-side-part {
+    width: 100%;
+}
+
+.ifsc-flex {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+.ifsc-flex p {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-size: 16px;
+    text-transform: capitalize;
+    color: #000000;
+    margin: 10px 0;
+}
+
+.ifsc-flex label {
+    font-family: 'Poppins';
+    font-weight: 600;
+    font-size: 16px;
+    color: #979797;
+}
+
+.i-want-to-only {
+    font-family: 'Poppins';
+    font-weight: 600;
+    font-size: 13px;
+    color: #979797;
+}
+
+.i-have-gst {
+    font-family: 'Poppins';
+    font-weight: 600;
+    font-size: 16px;
+    color: #979797;
+    margin-left: 10px;
+}
+
+.generate-otp {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-size: 16px;
+    background-color: transparent;
+    color: #979797;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    margin: 10px 0;
+}
+
+.main-input-otp button {
+    background: #FEA700;
+    border-radius: 0px 5px 5px 0px;
+    border: 0;
+    height: 41px;
+    padding: 0px 10px;
+    color: white;
+}
+
+.main-input-otp input {
+    width: 70%;
+    height: 40px;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    border-radius: 5px 0px 0px 5px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+    color: #979797;
+    padding: 0 10px;
+    background-color: transparent;
+}
+
+.modal-content {
+    background-color: #D9D9D9;
+}
+
+.save {
+    background: #FEA700;
+    border: 1px solid #000000;
+    border-radius: 5px;
+    color: #F4F4F4;
+    padding: 5px 50px;
+    margin: 10px 0;
+}
+
+.syb {
+    background: #FEA700;
+    border: 1px solid #000000;
+    border-radius: 5px;
+    color: #000000;
+    padding: 5px 50px;
+    margin: 10px 0;
+    text-align: center;
+}
+
+.none-div {
+    width: 100%;
+    text-align: center;
+}
+
+@media screen and (max-width: 1304px) {
+
+    .ifsc-flex label {
+        font-size: 13px;
+    }
+
+    .ifsc-flex p {
+        font-size: 13px;
+    }
+
+    .ifsc-flex {
+        gap: 3px;
+    }
+
+    .account-text p {
+        font-size: 13px;
+    }
 }
