--- a/src/Components/Styles/Demo.css
+++ b/src/Components/Styles/Demo.css
@@ -1,7 +1,11 @@
-.line {
-    filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.5));
+.NavLink.active {
+    color: red;
 }
 
-.chart {
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+.NavLink.active .icon {
+    color: blue;
+}
+
+.navbar-nav .dropdown-menu {
+    position: static !important;
 }
