--- a/src/Components/Styles/Demo.css
+++ b/src/Components/Styles/Demo.css
@@ -1,11 +1,42 @@
-.NavLink.active {
-    color: red;
+.active {
+    color: #FEA700 !important;
+    background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0) 110.41%);
+    background: url(../Images/active-inve.png);
 }
 
-.NavLink.active .icon {
-    color: blue;
-}
-
-.navbar-nav .dropdown-menu {
+.sidenavbar .navbar-nav .dropdown-menu {
     position: static !important;
+}
+
+.sidenavbar {
+    width: 200px;
+    height: 100vh;
+    align-items: baseline;
+    background-color: #252525 !important;
+}
+
+.sidenavbar .navbar-nav {
+    width: 100% !important;
+}
+
+.sidenavbar .navbar-collapse {
+    text-align: center;
+}
+
+.sidenavbar .navbar-nav .dropdown-menu {
+    text-align: center;
+}
+
+.logo {
+    width: 100%;
+    padding: 25px;
+}
+
+.navbar-expand-lg .navbar-nav .nav-link {
+    color: #FFFFFF;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 10px;
+    padding: 10px 25px;
 }
