--- a/src/Components/Styles/Home.css
+++ b/src/Components/Styles/Home.css
@@ -1,108 +1,34 @@
-.sidebar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 300px;
+@import "rsuite/dist/rsuite.css";
+
+.rs-sidenav-collapse-in {
     height: 100vh;
-    background: black;
 }
 
-.header {
-    color: white;
-    text-align: center;
-    padding: 15px;
+.rs-sidenav-default {
+    background: #252525;
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
 }
 
-.logo img{
+.rs-sidenav-nav>.rs-sidenav-item,
+.rs-sidenav-nav>.rs-dropdown .rs-dropdown-toggle {
+    background: #252525;
+}
+
+.new-logo {
     width: 100%;
-    padding: 30px;
+    padding: 35px;
 }
 
-.toggle {
-    position: fixed;
-    top: 5px;
-    left: 5px;
-    background: black;
-    color: white;
-    border: none;
-    font-size: 16px;
-    cursor: pointer;
-    display: none;
-}
-
-nav a {
-    text-decoration: none;
-    color: white;
-}
-
-nav .home-ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    color: white;
-    text-align: center;
-    transition: max-height .5s;
-}
-
-.home-li {
-    padding: 20px;
-}
-
-.home-li:hover {
-    background-color: crimson;
-}
-.home-li a:hover {
-    color: aliceblue;
-}
-
-.container {
-    width: 80%;
-    margin: 0 auto 0 300px;
-    padding: 20px;
-}
-
-.home-li a{
+.display-flex {
+    width: 100%;
     display: flex;
     gap: 10px;
-    justify-content: flex-start;
-    padding: 0 50px;
+    align-items: center;
 }
 
-@media (max-width: 767px) {
-    .sidebar {
-        margin-left: -170px;
-    }
-
-    .sidebar.show {
-        margin-left: 0;
-    }
-
-    .header {
-        float: none;
-    }
-
-    nav .home-ul {
-        background: black;
-        max-height: 0;
-        width: 100%;
-    }
-
-    nav .home-ul .home-li {
-        width: 100%;
-        padding: 15px;
-    }
-
-    .toggle {
-        display: inline;
-    }
-
-    .container {
-        width: 100%;
-        margin-top: 50px;
-        margin-left: 0;
-    }
-
-    .container.slide {
-        margin-left: 170px;
-    }
+.rs-sidenav-default.rs-sidenav-collapse-in .rs-sidenav-item.rs-sidenav-item-active,
+.rs-sidenav-default.rs-sidenav-collapsing .rs-sidenav-item.rs-sidenav-item-active,
+.rs-sidenav-default.rs-sidenav-collapse-in .rs-dropdown-menu>.rs-dropdown-item.rs-dropdown-item-active,
+.rs-sidenav-default.rs-sidenav-collapsing .rs-dropdown-menu>.rs-dropdown-item.rs-dropdown-item-active {
+    color: #FEA700;
 }
