--- a/src/Components/Styles/LandingPage.css
+++ b/src/Components/Styles/LandingPage.css
@@ -346,6 +346,76 @@
 }
 
 /* learning_hub */
+/* growth-section */
+.growth_sec {
+    background: #FFF2D8;
+}
+
+.growth_sec h2 {
+    font-size: 34px;
+    line-height: 46px;
+}
+
+.growth_sec .reward_info_cnt {
+    max-width: 270px;
+}
+
+/* growth-section */
+/* category-section */
+.category_sec {
+    padding: 100px 0;
+}
+
+.category_sec h2 {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 36px;
+    color: #111111;
+    margin-bottom: 35px;
+    text-align: center;
+}
+
+.category_inn {
+    width: 100%;
+    max-width: 1100px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    flex-flow: row wrap;
+    gap: 25px;
+}
+
+.category_inn p {
+    width: 100%;
+    max-width: 220px;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 24px;
+    color: #333333;
+    text-align: center;
+}
+
+.category_sec .viewmore_part {
+    width: 100%;
+    text-align: center;
+}
+
+.category_sec .viewmore_btn {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 24px;
+    text-align: center;
+    color: #333333;
+    background: transparent;
+    border: 1px solid #000000;
+    margin-top: 35px;
+    padding: 6px 15px;
+}
+
+/* category-section */
 
 @media screen and (max-width: 1300px) {
 
@@ -505,7 +575,42 @@
 
     /* reward-section */
     /* learning_hub */
-    
+    .learning_hub {
+        padding: 40px 0;
+        margin: 80px 0;
+    }
+
+    .learning_hub .container-fluid {
+        max-width: 700px;
+    }
+
+    .learning_cnt img {
+        margin-bottom: 25px;
+        width: 160px;
+    }
+
+    .learning_cnt h2 {
+        font-size: 22px;
+        line-height: 32px;
+    }
+
+    .learning_cnt {
+        max-width: 300px;
+    }
+
+    .learning_inn a.learning_hub_btn {
+        width: 220px;
+        height: 56px;
+        padding: 9px;
+        font-size: 16px;
+        line-height: 18px;
+    }
+
+    .learning_inn a.learning_hub_btn img {
+        margin-right: 8px;
+        width: 37px;
+    }
+
     /* learning_hub */
 }
 
@@ -609,4 +714,57 @@
     }
 
     /* reward-section */
+    /* learning_hub */
+    .learning_cnt img {
+        margin-bottom: 20px;
+        width: 130px;
+    }
+
+    .learning_cnt h2 {
+        font-size: 17px;
+        line-height: 25px;
+    }
+
+    .learning_cnt {
+        max-width: 230px;
+    }
+
+    .learning_inn a.learning_hub_btn {
+        width: 180px;
+        height: 50px;
+        padding: 10px;
+        font-size: 14px;
+        line-height: 16px;
+    }
+
+    .learning_inn a.learning_hub_btn img {
+        margin-right: 5px;
+        width: 30px;
+    }
+
+    .learning_hub .container-fluid {
+        max-width: 580px;
+    }
+
+    /* learning_hub */
+}
+
+@media screen and (max-width: 500px) {
+
+    /* learning_hub */
+    .learning_hub {
+        padding: 33px 0;
+        margin: 60px 0;
+    }
+
+    .learning_inn {
+        flex-direction: column;
+        gap: 37px;
+    }
+
+    .learning_cnt {
+        text-align: center;
+    }
+
+    /* learning_hub */
 }
