--- a/src/Components/Styles/LandingPage.css
+++ b/src/Components/Styles/LandingPage.css
@@ -417,6 +417,60 @@
 
 /* category-section */
 
+/* support-section */
+.support_sec {
+    padding: 60px 0;
+    background: #F6F7F9;
+    margin-bottom: 60px;
+}
+
+.support_sec .container-fluid {
+    max-width: 1250px;
+}
+
+.support_inn {
+    display: flex;
+    justify-content: space-between;
+    gap: 25px;
+}
+
+.support_inn h2 {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 28px;
+    line-height: 38px;
+    color: #111111;
+}
+
+.support_info p {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 26px;
+    color: #333333;
+    margin-bottom: 35px;
+}
+
+.support_cnt {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.support_cnt h4 {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 20px;
+    color: #333333;
+}
+
+.support_cnt h4 span {
+    color: #FEA700;
+}
+
+/* support-section */
+
 @media screen and (max-width: 1300px) {
 
     /* hero-section */
@@ -612,6 +666,28 @@
     }
 
     /* learning_hub */
+    /* category-section */
+    .category_sec {
+        padding: 80px 0;
+    }
+
+    .category_sec h2 {
+        font-size: 25px;
+        line-height: 30px;
+    }
+
+    .category_inn p {
+        max-width: 180px;
+    }
+
+    /* category-section */
+    /* support-section */
+    .support_inn h2 {
+        font-size: 24px;
+        line-height: 34px;
+    }
+
+    /* support-section */
 }
 
 @media screen and (max-width: 767px) {
@@ -747,6 +823,65 @@
     }
 
     /* learning_hub */
+    /* category-section */
+    .category_sec {
+        padding: 60px 0;
+    }
+
+    .category_sec h2 {
+        font-size: 21px;
+        line-height: 26px;
+    }
+
+    .category_inn p {
+        max-width: 154px;
+        font-size: 14px;
+        line-height: 22px;
+    }
+
+    .category_inn {
+        gap: 20px;
+    }
+
+    /* category-section */
+    /* support-section */
+    .support_sec {
+        padding: 42px 0;
+        margin-bottom: 50px;
+    }
+
+    .support_inn {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .support_info p {
+        font-size: 14px;
+        line-height: 22px;
+        margin-bottom: 25px;
+        text-align: center;
+    }
+
+    .support_inn h2 {
+        font-size: 20px;
+        line-height: 30px;
+        text-align: center;
+    }
+
+    .support_cnt {
+        justify-content: center;
+    }
+
+    .support_cnt img {
+        width: 44px;
+    }
+
+    .support_cnt h4 {
+        font-size: 13px;
+        line-height: 17px;
+    }
+
+    /* support-section */
 }
 
 @media screen and (max-width: 500px) {
