--- a/src/Components/Styles/Demo.css
+++ b/src/Components/Styles/Demo.css
@@ -35,7 +35,7 @@
 
 .sidenavbar {
     width: 200px;
-    height: auto;
+    height: 100vh;
     min-height: 100%;
     align-items: baseline;
     background-color: #252525 !important;
