--- a/src/Components/Styles/Home.css
+++ b/src/Components/Styles/Home.css
@@ -1,4 +1,4 @@
-@import "rsuite/dist/rsuite.css";
+/* @import "rsuite/dist/rsuite.css";
 
 .rs-sidenav-collapse-in {
     height: 100vh;
@@ -31,4 +31,298 @@
 .rs-sidenav-default.rs-sidenav-collapse-in .rs-dropdown-menu>.rs-dropdown-item.rs-dropdown-item-active,
 .rs-sidenav-default.rs-sidenav-collapsing .rs-dropdown-menu>.rs-dropdown-item.rs-dropdown-item-active {
     color: #FEA700;
+} */
+
+
+.sidenavbar .navbar-nav .nav-link.active {
+    color: #FEA700 !important;
+    background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0) 110.41%);
 }
+
+.sidenavbar .navbar-nav .nav-link {
+    color: #FFFFFF !important;
+    display: flex !important;
+    align-items: center !important;
+    justify-content: flex-start !important;
+    gap: 10px !important;
+    padding: 10px 25px !important;
+    position: relative;
+}
+
+.sidenavbar .navbar-nav .nav-link::after {
+    content: '';
+    position: absolute;
+    width: 5px;
+    height: 100%;
+    left: 0;
+    top: 0;
+    display: none;
+    background: #FEA700;
+    border-radius: 0 20px 20px 0;
+}
+
+.sidenavbar .navbar-nav .nav-link.active::after {
+    display: block;
+}
+
+.sidenavbar .navbar-nav .dropdown-menu {
+    position: static !important;
+}
+
+.sidenavbar {
+    width: 300px;
+    height: 100vh;
+    min-height: 100%;
+    align-items: baseline;
+    background-color: #252525 !important;
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
+}
+
+.sidenavbar .navbar-nav {
+    width: 100% !important;
+}
+
+.sidenavbar .navbar-collapse {
+    text-align: center;
+}
+
+.sidenavbar .navbar-nav .dropdown-menu {
+    text-align: center;
+}
+
+.logo {
+    width: 100%;
+    padding: 25px;
+}
+
+.home-display-flex {
+    display: flex;
+}
+
+.left-sidenavbar-head p {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-size: 20px;
+    color: #000000;
+}
+
+.left-sidenavbar-head span {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+    font-size: 14px;
+    color: #000000;
+}
+
+.sidenavbar-head-inner {
+    display: flex;
+    justify-content: space-between;
+    margin: 25px 100px;
+}
+
+.fa-comment {
+    padding: 10px;
+    background-color: #000000;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
+.fa-bell {
+    padding: 10px;
+    background-color: #FFFFFF;
+    border-radius: 50%;
+    border: 1px solid;
+    margin-right: 10px;
+}
+
+.sidenavbar-head {
+    width: 100%;
+}
+
+.chart {
+    box-shadow: 0px 0px 24px rgba(0, 0, 0, 0.15);
+    border-radius: 5px;
+    padding: 50px 10px;
+    height: 657px;
+}
+
+.seller-container {
+    width: 100%;
+    max-width: 1530px;
+    margin: 0 auto;
+    padding: 0 15px;
+}
+
+.middle-sidenavbar-inner {
+    margin: 50px auto;
+    display: flex;
+    gap: 25px;
+    justify-content: space-between;
+}
+
+.up-corner {
+    display: flex;
+    gap: 20px;
+    margin-bottom: 20px;
+}
+
+.down-corner {
+    gap: 20px;
+    display: flex;
+}
+
+.qwedsa {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 15px;
+}
+
+.new-order-name p {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    color: #000000;
+    opacity: 0.3;
+}
+
+.new-order-name span {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-size: 18px;
+    color: #000000;
+}
+
+.new-order {
+    background: #FFFFFF;
+    box-shadow: 0px 0px 9px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    padding: 15px 20px;
+}
+
+.plus p {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    color: #000000;
+}
+
+.plus {
+    display: flex;
+    gap: 6px;
+}
+
+.plus span {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    color: #00BA00;
+}
+
+.plus1 {
+    display: flex;
+    gap: 4px;
+}
+
+.plus1 span {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    color: #FE0000;
+}
+
+.new-order-icon img {
+    width: 100%;
+    max-width: 26px;
+}
+
+.new-order-icon1 {
+    background: rgba(254, 0, 0, 0.2);
+    border-radius: 5px;
+    padding: 15px;
+}
+
+.new-order-icon1 img {
+    width: 100%;
+    max-width: 26px;
+}
+
+.new-order-icon {
+    background: rgba(0, 186, 0, 0.2);
+    border-radius: 5px;
+    padding: 15px;
+}
+
+.grid-item {
+    background-color: rgba(255, 255, 255, 0.8);
+    text-align: center;
+    padding: 20px;
+    font-size: 30px;
+}
+
+.grid_number {
+    font-size: 16px;
+    font-family: 'Poppins';
+    font-weight: 600;
+    font-size: 32px;
+}
+
+.grid_txt {
+    font-family: 'Poppins';
+    font-weight: 400;
+    font-size: 14px;
+}
+
+.item1 {
+    padding: 65px 0;
+    text-align: center;
+    background: #FEA700;
+    border: 1px solid #FFFFFF;
+}
+
+.item2 {
+    text-align: center;
+    background: rgba(254, 167, 0, 0.3);
+    border: 1px solid #FFFFFF;
+}
+
+.item3 {
+    text-align: center;
+    background: rgba(254, 167, 0, 0.4);
+    border: 1px solid #FFFFFF;
+}
+
+.item4 {
+    text-align: center;
+    background: rgba(254, 167, 0, 0.8);
+    border: 1px solid #FFFFFF;
+}
+
+.item5 {
+    align-items: center;
+    text-align: center;
+    background: rgba(254, 167, 0, 0.6);
+    border: 1px solid #FFFFFF;
+}
+
+.over {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-size: 20px;
+    color: #000000;
+    margin-bottom: 20px;
+}
+
+.overview {
+    padding: 30px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 32px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    margin-top: 40px;
+}
+
+
+/* section 4  */
+
+/* .section_4 {} */
+
+/* section 4  */
