--- a/src/Components/Styles/Home.css
+++ b/src/Components/Styles/Home.css
@@ -35,7 +35,7 @@
 
 .sidenavbar {
     width: 300px;
-    height: 100vh;
+    height: 100%;
     min-height: 100%;
     align-items: baseline;
     background-color: #252525 !important;
